Fix base url on assets

--- a/guide/filters/index.html
+++ b/guide/filters/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Locomotive  | Controllers : Filters </title>    <link rel="stylesheet" href="/vendor/bootstrap/2.2.1/css/bootstrap.css">
-    <link rel="stylesheet" href="/vendor/highlight/gc5f3dbd/styles/github.css">
-    <link rel="stylesheet" href="/assets/css/site.css">
+    <title>Locomotive  | Controllers : Filters </title>    <link rel="stylesheet" href="/emvc/vendor/bootstrap/2.2.1/css/bootstrap.css">
+    <link rel="stylesheet" href="/emvc//vendor/highlight/gc5f3dbd/styles/github.css">
+    <link rel="stylesheet" href="/emvc/assets/css/site.css">
   </head>
   <body>
     <div class="container">
