Fix base url on assets

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
       <div class="masthead">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a href="/">Home</a></li>    <li><a href="/guide/">Guide</a></li>  </ul>
-  <h3><a href="/">emvc</a></h3>
+    <li class="active"><a href="/emvc">Home</a></li>    <li><a href="/emvc/guide/">Guide</a></li>  </ul>
+  <h3><a href="/emvc">emvc</a></h3>
 </div>
 
       
@@ -29,7 +29,7 @@
     configuration, while integrating seamlessly with any database and template
     engine.  emvc builds on <a href="http://expressjs.com/">Express</a>,
     preserving the power and simplicity you've come to expect from Node.</p>
-    <p><a class="btn" href="/guide/">Read the Guide &raquo;</a></p>
+    <p><a class="btn" href="guide/">Read the Guide &raquo;</a></p>
   </div>
   <div class="span4">
     <h3>Features</h3>
@@ -59,9 +59,9 @@
 </div>
 
       <div class="footer">
-  <p>&copy; 2011-2014 Jared Hanson</p>
+  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
 </div>
-      
+
 
     </div>
   </body>
