Fix base url on assets

--- a/guide/index.html
+++ b/guide/index.html
@@ -77,7 +77,7 @@ demands of the modern web.  Let&#39;s <a href="guide/get-started">get started</a
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
