--- a/guide/routing/index.html
+++ b/guide/routing/index.html
@@ -120,7 +120,7 @@ element within an array.</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
