--- a/guide/filters/index.html
+++ b/guide/filters/index.html
@@ -104,7 +104,7 @@ middleware.</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
