--- a/guide/get-started/index.html
+++ b/guide/get-started/index.html
@@ -72,7 +72,7 @@ continue reading this guide for details on how the pieces fit together.</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
