--- a/guide/initialization/index.html
+++ b/guide/initialization/index.html
@@ -150,7 +150,7 @@ strategies used for authentication.</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
