--- a/guide/mongoose/index.html
+++ b/guide/mongoose/index.html
@@ -83,7 +83,7 @@ configure Mongoose and connect to MongoDB when starting a emvc application:</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
