--- a/guide/namespaces/index.html
+++ b/guide/namespaces/index.html
@@ -193,7 +193,7 @@ doing otherwise quickly becomes cumbersome.</p>
   </div>
 </div>
       <div class="footer">
-  <p>&copy; 2016 Nicholas Penree. Based on [Locomotive.js](http://www.locomotivejs.org) by Jared Hanson.</p>
+  <p>&copy; 2016 Nicholas Penree. Based on <a href="http://www.locomotivejs.org">Locomotive</a> by Jared Hanson.</p>
 </div>
 
 
