Fix base url on assets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Locomotive   - Powerful MVC web framework for Node.js</title>    <link rel="stylesheet" href="/emvc/vendor/bootstrap/2.2.1/css/bootstrap.css">
+    <title>emvc   - Powerful MVC web framework for Node.js</title>    <link rel="stylesheet" href="/emvc/vendor/bootstrap/2.2.1/css/bootstrap.css">
     <link rel="stylesheet" href="/emvc//vendor/highlight/gc5f3dbd/styles/github.css">
     <link rel="stylesheet" href="/emvc/assets/css/site.css">
   </head>
